<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="vertical">
  	
<ScrollView  
  android:layout_width="wrap_content"
  android:layout_height="fill_parent"
  android:layout_weight="1">
<LinearLayout android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
 <TextView android:text="@string/txt_help_1" 
	android:layout_margin="5dp" 
	android:id="@+id/TextView01" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="left" >
</TextView>

<TextView android:text="@string/txt_help_2" 
	android:layout_margin="5dp" 
	android:id="@+id/TextView02" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="left" >
</TextView>
<TextView android:text="@string/txt_help_3" 
	android:layout_margin="5dp" 
	android:id="@+id/TextView03" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="left" >
</TextView>

</LinearLayout>
</ScrollView>

<Button android:text="@string/txt_ok" 
	android:id="@+id/btnHelp" 
	android:layout_margin="5dp" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal" 
	android:width="100dp">
</Button>

</LinearLayout>


